--- a/mod4_sol/index.html
+++ b/mod4_sol/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Check the Console for Results</title>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
